# VixenFood

./: .gitignore  README.md  docker-compose.yaml  example.env
backend/: Dockerfile
backend/app/: pyproject.toml
backend/app/apps/products/: admin.py  repositories.py  serializers.py  urls.py  views.py
backend/app/apps/products/migrations/: 0001_initial.py
backend/app/apps/recipes/: models.py  repositories.py  serializers.py  urls.py  views.py
backend/app/apps/recipes/migrations/: 0001_initial.py  0002_cookingstep_display_id.py
backend/app/core/: settings.py  urls.py
backend/app/core/abstracts/: repositories.py
backend/app/products/: admin.py  models.py  serializers.py  urls.py
backend/app/recipes/: models.py  serializers.py  urls.py  views.py
backend/app/recipes/migrations/: 0003_remove_cookingstep_display_id_alter_cookingstep_step.py
core/: settings.py  urls.py
ingredients/: models.py  serializers.py  urls.py  views.py
ingredients/migrations/: 0001_initial.py  0002_delete_recipeingredients.py
products/: models.py  serializers.py  urls.py  views.py
recipes/: models.py  serializers.py  urls.py  views.py
recipes/migrations/: 0001_initial.py  0002_recipeingredients.py  0002_rename_recipeingredients_ingredients_and_more.py  0003_rename_ingredients_ingredient.py  0004_ingredient_recipes_ing_product_dd1e5b_idx.py  0005_remove_ingredient_recipes_ing_product_dd1e5b_idx_and_more.py  0006_remove_ingredient_recipes_ing_recipe__fac781_idx_and_more.py  0007_remove_ingredient_covering_index.py
